tests/errors/pure_cclass_without_body.pxd
# mode: error

cdef class Test
